--- a/index.html
+++ b/index.html
@@ -4,7 +4,8 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
+    <title>Starry Messages - Leave your mark among the stars</title>
+    <meta name="description" content="Create and share messages as beautiful stars in an interactive night sky. Experience the magic of leaving your thoughts among the stars for others to discover." />
   </head>
   <body>
     <div id="root"></div>
